<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antobot_nav2_costmap</name>
  <version>0.0.0</version>
  <description>The antobot_nav2_costmap package, which contains the code for costmap</description>
  <maintainer email="soyoung.kim@antobot.ai">So Young Kim</maintainer>
  <license>TODO</license>

  <exec_depend>ros2launch</exec_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
