<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antobot_navigation</name>
  <version>0.0.0</version>
  <description>The antobot_navigation package</description>
  <maintainer email="soyoung.kim@antobot.ai">So-Young Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
