<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antobot_teleop</name>
  <version>0.0.0</version>
  <description>The antobot_teleop package, which contains the code for robot teleoperation</description>
  <maintainer email="soyoung.kim@antobot.ai">So Young Kim</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>joy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
